NTR: improve integration tests pipeline

--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -220,12 +220,15 @@ jobs:
           docker logs shop
 
       - name: Upload into Docker
-        run: docker cp $(pwd)/. shop:/var/www/html/custom/plugins/MolliePayments
-
-      - name: Install Plugin
         run: |
-          docker exec shop bash -c "php bin/console plugin:refresh"
-          docker exec shop bash -c "php bin/console plugin:install MolliePayments --activate"
+          docker cp $(pwd)/. shop:/var/www/html/custom/plugins/MolliePayments
+          docker exec shop bash -c 'sudo chown www-data:www-data /var/www/html/custom/plugins -R'
+
+      - name: Install and Build Plugin
+        run: |
+          docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make clean'
+          docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make install'
+          docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make build'
 
   # ------------------------------------------------------------------------------------------------------------------------
 
