--- a/tests/Swagger/mollie.yaml
+++ b/tests/Swagger/mollie.yaml
@@ -25,21 +25,21 @@ paths:
         - "Authorization"
       summary: "Shopware API Authorization"
       requestBody:
-          content:
-            application/json:
-              schema:
-                  type: object
-                  properties:
-                    grant_type:
-                      default: "password"
-                    client_id:
-                      default: "administration"
-                    scopes:
-                      default: "write"
-                    username:
-                      default: "admin"
-                    password:
-                      default: "shopware"
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                grant_type:
+                  default: "password"
+                client_id:
+                  default: "administration"
+                scopes:
+                  default: "write"
+                username:
+                  default: "admin"
+                password:
+                  default: "shopware"
       responses:
         "200":
           description: "successful operation"
@@ -57,30 +57,30 @@ paths:
           description: "Shopware order number"
           required: true
       responses:
-          "200":
-            description: "successful operation"
+        "200":
+          description: "successful operation"
 
   /api/mollie/ship/item?order={order}&item={item}&quantity={quantity}:
-      get:
-        tags:
-          - "Shipping"
-        summary: "Partial shipment"
-        security:
-          - AdminAPI: []
-        parameters:
-          - name: "order"
-            in: "path"
-            description: "Shopware order number"
-            required: true
-          - name: "item"
-            in: "path"
-            description: "product number"
-          - name: "quantity"
-            in: "path"
-            description: "quantity"
-        responses:
-          "200":
-            description: "successful operation"
+    get:
+      tags:
+        - "Shipping"
+      summary: "Partial shipment"
+      security:
+        - AdminAPI: []
+      parameters:
+        - name: "order"
+          in: "path"
+          description: "Shopware order number"
+          required: true
+        - name: "item"
+          in: "path"
+          description: "product number"
+        - name: "quantity"
+          in: "path"
+          description: "quantity"
+      responses:
+        "200":
+          description: "successful operation"
 
   /api/mollie/refund/order?number={number}&amount={amount}&description={description}:
     get:
@@ -104,7 +104,6 @@ paths:
         "200":
           description: "successful operation"
 
-
   /api/search/order:
     post:
       tags:
@@ -114,26 +113,67 @@ paths:
       security:
         - AdminAPI: []
       requestBody:
-          content:
-            application/json:
-              schema:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                associations:
                   type: object
                   properties:
-                    filter:
-                      type: array
-                      items:
-                        type: object
-                        properties:
-                            field:
-                              default: "orderNumber"
-                            type:
-                              default: "equals"
-                            value:
-                              default: "##insert-number##"
+                    transactions:
+                      type: object
+                filter:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      field:
+                        default: "orderNumber"
+                      type:
+                        default: "equals"
+                      value:
+                        default: "#OrderID#"
 
       responses:
         "200":
           description: "successful operation"
+
+
+  /api/search/state-machine-history:
+    post:
+      tags:
+        - "Shopware Order"
+      summary: "Search for the transaction status history"
+      description: "Please insert your order order_transaction.id from the order search response body."
+      security:
+        - AdminAPI: [ ]
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                associations:
+                  type: object
+                  properties:
+                    toStateMachineState:
+                      type: object
+                filter:
+                  type: array
+                  items:
+                    properties:
+                        field:
+                          default: "state_machine_history.entityId.id"
+                        type:
+                          default: "equals"
+                        value:
+                          default: "#OrderTransactionID#"
+
+      responses:
+        "200":
+          description: "successful operation"
+
 
 components:
   securitySchemes:
