NTR: add Mollie B.V. as composer author

--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,7 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "dasistweb GmbH"
-    },
-    {
-      "name": "Kiener Digital Commerce"
+      "name": "Mollie B.V."
     }
   ],
   "extra": {
