--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,10 @@
     }
   },
   "config": {
-    "optimize-autoloader": true
+    "optimize-autoloader": true,
+    "allow-plugins": {
+      "infection/extension-installer": false
+    }
   },
   "autoload": {
     "psr-4": {
