--- a/composer.json
+++ b/composer.json
@@ -1,84 +1,84 @@
 {
-  "name": "kiener/mollie-payments-plugin",
-  "description": "Mollie Payments",
-  "version": "v2.2.2",
-  "type": "shopware-platform-plugin",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Mollie B.V."
-    }
-  ],
-  "extra": {
-    "shopware-plugin-class": "Kiener\\MolliePayments\\MolliePayments",
-    "copyright": "(c) by Mollie B.V.",
-    "label": {
-      "de-DE": "Mollie Zahlungen",
-      "en-GB": "Mollie Payments",
-      "nl-NL": "Mollie Betalingen"
-    },
-    "description": {
-      "de-DE": "Mit Mollie integrieren Sie alle wichtigen internationalen und lokalen Zahlungsmethoden in nur einem Schritt in Ihren Shopware-Webshop. Starten Sie noch heute!",
-      "en-GB": "With Mollie you integrate every major global and local payment method in your Shopware webshop in one go. Start growing your business with effortless payments today!",
-      "nl-NL": "Met Mollie integreer je alle belangrijke internationale en lokale betaalmethoden in één keer in je Shopware webshop. Start vandaag nog!"
-    },
-    "manufacturerLink": {
-      "de-DE": "https://store.shopware.com/mollie.html",
-      "en-GB": "https://store.shopware.com/mollie.html",
-      "nl-NL": "https://store.shopware.com/mollie.html"
-    },
-    "supportLink": {
-      "de-DE": "https://www.mollie.com/contact",
-      "en-GB": "https://www.mollie.com/contact",
-      "nl-NL": "https://www.mollie.com/contact"
-    }
-  },
-  "config": {
-    "optimize-autoloader": true,
-    "allow-plugins": {
-      "infection/extension-installer": false
-    }
-  },
-  "autoload": {
-    "psr-4": {
-      "Kiener\\MolliePayments\\": "src/",
-      "Mollie\\Api\\": "vendor/mollie/mollie-api-php/src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "MolliePayments\\Tests\\": "tests/PHPUnit/",
-      "MolliePayments\\PHPStan\\": "tests/PHPStan/"
-    }
-  },
-  "suggest": {
-    "shopware/storefront": "Require '*'. Enables features like Creditcard Components and iDeal issuer selector.",
-    "shopware/administration": "Require '*'. Enables features like partial shipping and refunding."
-  },
-  "conflict": {
-    "shopware/storefront": "<6,>=7",
-    "shopware/administration": "<6,>=7"
-  },
-  "require": {
-    "mollie/mollie-api-php": "2.40.1"
-  },
-  "require-dev": {
-    "shopware/core": "*",
-    "shopware/administration": "*",
-    "shopware/storefront": "*",
-    "phpunit/phpunit": "^9.5",
-    "phpstan/phpstan": "^0.12.82",
-    "friendsofphp/php-cs-fixer": "^2.18",
-    "phpcompatibility/php-compatibility": "^9.3",
-    "squizlabs/php_codesniffer": "^3.6",
-    "infection/infection": "^0.25.4"
-  },
-  "scripts": {
-    "post-install-cmd": [
-      "[ ! -f vendor/bin/phpcs ] || vendor/bin/phpcs --config-set installed_paths vendor/phpcompatibility/php-compatibility"
+    "name": "kiener/mollie-payments-plugin",
+    "description": "Mollie Payments",
+    "version": "v2.2.2",
+    "type": "shopware-platform-plugin",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Mollie B.V."
+        }
     ],
-    "post-update-cmd": [
-      "[ ! -f vendor/bin/phpcs ] || vendor/bin/phpcs --config-set installed_paths vendor/phpcompatibility/php-compatibility"
-    ]
-  }
+    "extra": {
+        "shopware-plugin-class": "Kiener\\MolliePayments\\MolliePayments",
+        "copyright": "(c) by Mollie B.V.",
+        "label": {
+            "de-DE": "Mollie Zahlungen",
+            "en-GB": "Mollie Payments",
+            "nl-NL": "Mollie Betalingen"
+        },
+        "description": {
+            "de-DE": "Mit Mollie integrieren Sie alle wichtigen internationalen und lokalen Zahlungsmethoden in nur einem Schritt in Ihren Shopware-Webshop. Starten Sie noch heute!",
+            "en-GB": "With Mollie you integrate every major global and local payment method in your Shopware webshop in one go. Start growing your business with effortless payments today!",
+            "nl-NL": "Met Mollie integreer je alle belangrijke internationale en lokale betaalmethoden in \u00e9\u00e9n keer in je Shopware webshop. Start vandaag nog!"
+        },
+        "manufacturerLink": {
+            "de-DE": "https://store.shopware.com/mollie.html",
+            "en-GB": "https://store.shopware.com/mollie.html",
+            "nl-NL": "https://store.shopware.com/mollie.html"
+        },
+        "supportLink": {
+            "de-DE": "https://www.mollie.com/contact",
+            "en-GB": "https://www.mollie.com/contact",
+            "nl-NL": "https://www.mollie.com/contact"
+        }
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "infection/extension-installer": false
+        }
+    },
+    "autoload": {
+        "psr-4": {
+            "Kiener\\MolliePayments\\": "src/",
+            "Mollie\\Api\\": "vendor/mollie/mollie-api-php/src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "MolliePayments\\Tests\\": "tests/PHPUnit/",
+            "MolliePayments\\PHPStan\\": "tests/PHPStan/"
+        }
+    },
+    "suggest": {
+        "shopware/storefront": "Require '*'. Enables features like Creditcard Components and iDeal issuer selector.",
+        "shopware/administration": "Require '*'. Enables features like partial shipping and refunding."
+    },
+    "conflict": {
+        "shopware/storefront": "<6,>=7",
+        "shopware/administration": "<6,>=7"
+    },
+    "require": {
+        "mollie/mollie-api-php": "2.40.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "phpstan/phpstan": "^0.12.82",
+        "friendsofphp/php-cs-fixer": "^2.18",
+        "phpcompatibility/php-compatibility": "^9.3",
+        "squizlabs/php_codesniffer": "^3.6",
+        "infection/infection": "^0.25.4",
+        "shopware/core": "*",
+        "shopware/administration": "*",
+        "shopware/storefront": "*"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "[ ! -f vendor/bin/phpcs ] || vendor/bin/phpcs --config-set installed_paths vendor/phpcompatibility/php-compatibility"
+        ],
+        "post-update-cmd": [
+            "[ ! -f vendor/bin/phpcs ] || vendor/bin/phpcs --config-set installed_paths vendor/phpcompatibility/php-compatibility"
+        ]
+    }
 }
