--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ src/Resources/app/storefront/node_modules
 
 src/Resources/public/administration/css/
 src/Resources/public/administration/js/
+/tests/Cypress/Cypress.env.json
