NTR: add core cypress tests for PR pipeline

--- a/tests/Cypress/makefile
+++ b/tests/Cypress/makefile
@@ -26,7 +26,6 @@ ifndef shopware
 endif
 	CYPRESS_BASE_URL=$(url) CYPRESS_SHOPWARE=$(shopware) ./node_modules/.bin/cypress open
 
-
 # ---------------------------------------------------------------------------------------------
 
 run: ## Runs all E2E tests for Shopware
@@ -38,4 +37,5 @@ ifndef shopware
 	$(warning Please provide the Shopware Version as argument to Start Cypress!)
 	@exit 1
 endif
-	CYPRESS_BASE_URL=$(url) CYPRESS_SHOPWARE=$(shopware) ./node_modules/.bin/cypress run --headless
+	CYPRESS_BASE_URL=$(url) CYPRESS_SHOPWARE=$(shopware) ./node_modules/.bin/cypress run --headless --env tags="$(tags)"
+
