--- a/tests/Cypress/makefile
+++ b/tests/Cypress/makefile
@@ -37,5 +37,5 @@ ifndef shopware
 	$(warning Please provide the Shopware Version as argument to Start Cypress!)
 	@exit 1
 endif
-	CYPRESS_BASE_URL=$(url) CYPRESS_SHOPWARE=$(shopware) ./node_modules/.bin/cypress run --headless --env tags="$(tags)"
+	CYPRESS_BASE_URL=$(url) CYPRESS_SHOPWARE=$(shopware) ./node_modules/.bin/cypress run --headless --env filters="$(filters)"
 
