--- a/src/Resources/app/administration/package.json
+++ b/src/Resources/app/administration/package.json
@@ -1,9 +1,11 @@
 {
-    "name": "mollie-shopware6-administration-tests",
+    "name": "mollie-shopware6-administration",
     "version": "1.0.0",
     "description": "",
     "author": "Mollie B.V.",
-    "dependencies": {},
+    "dependencies": {
+        "raw-loader": "^4.0.2"
+    },
     "devDependencies": {
         "@babel/cli": "^7.5.5",
         "@babel/core": "^7.5.5",
@@ -23,7 +25,6 @@
         "eslint-plugin-standard": "^5.0.0",
         "flow-bin": "^0.160.0",
         "jest": "^27.1.1",
-        "raw-loader": "^4.0.2",
         "stylelint": "^14.1.0",
         "stylelint-config-standard": "^24.0.0",
         "stylelint-scss": "^4.0.1"
