--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -238,6 +238,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - shopware: '6.4.15.0'
+            php: '8.1'
           - shopware: '6.4.14.0'
             php: '8.1'
           - shopware: '6.4.12.0'
