NTR: add missing shopware version to pipe

--- a/.github/workflows/compatibility_pipe.yml
+++ b/.github/workflows/compatibility_pipe.yml
@@ -20,7 +20,7 @@ on:
 jobs:
 
   e2e:
-    name: Plugin v${{ matrix.plugin }} | Shopware ${{ matrix.shopware }}
+    name: Plugin v${{ matrix.plugin }} | Shopware ${{ github.event.inputs.swVersion }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
