NTR: test compatibility pipe

--- a/.github/workflows/compatibility_pipe.yml
+++ b/.github/workflows/compatibility_pipe.yml
@@ -72,7 +72,9 @@ jobs:
         run: |
           # SEPA Direct Debit has been completely removed from Mollie. 
           # So we have to remove that entry from the tests in old Cypress versions
-          sed -i "" "/key: 'directdebit'/d" ./tests/Cypress/cypress/e2e/storefront/checkout/checkout-success.cy.js
+          ls -la tests/Cypress/cypress/e2e/storefront/checkout/
+          cat tests/Cypress/cypress/e2e/storefront/checkout/checkout-success.cy.js
+          sed -i "" "/key: 'directdebit'/d" tests/Cypress/cypress/e2e/storefront/checkout/checkout-success.cy.js
           cd tests/Cypress && make run shopware=${{ github.event.inputs.swVersion }} url=https://local.mollie.shop storeApiKey=SWSCOVFSNKLBYUTKS1VSOEDTUQ
 
       - name: Download Logs
