--- a/.github/workflows/compatibility_pipe.yml
+++ b/.github/workflows/compatibility_pipe.yml
@@ -70,10 +70,9 @@ jobs:
 
       - name: Start Cypress
         run: |
-          # SEPA Direct Debit has been completely removed from Mollie. 
-          # So we have to remove that entry from the tests in old Cypress versions
-          sed -i "" "/directdebit/d" tests/Cypress/cypress/integration/storefront/checkout/checkout-success.spec.js | true;
-          sed -i "" "/directdebit/d" tests/Cypress/cypress/e2e/storefront/checkout/checkout-success.cy.js | true;
+          # SEPA Direct Debit has been completely removed from Mollie. We have to remove that entry from the tests in old Cypress versions
+          cd tests/Cypress && sed -i "" "/directdebit/d" ./cypress/e2e/storefront/checkout/checkout-success.cy.js | true;
+          cd tests/Cypress && sed -i "" "/directdebit/d" ./cypress/integration/storefront/checkout/checkout-success.spec.js | true;
           cd tests/Cypress && make run shopware=${{ github.event.inputs.swVersion }} url=https://local.mollie.shop storeApiKey=SWSCOVFSNKLBYUTKS1VSOEDTUQ
 
       - name: Download Logs
