NTR: update pipelines to Shopware 6.4.16.0

--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -238,6 +238,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - shopware: '6.4.16.0'
+            php: '8.1'
           - shopware: '6.4.15.2'
             php: '8.1'
           - shopware: '6.4.15.1'
