--- a/.github/workflows/compatibility_pipe.yml
+++ b/.github/workflows/compatibility_pipe.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        plugin: [ '3.1.0', '3.0.0', '2.5.0', '2.4.0', '2.3.1', '2.3.0', '2.2.2', '2.2.1', '2.2.0' ]
+        plugin: [ '3.1.0', '3.0.0', '2.5.0' ]
     steps:
 
       - name: Clone Code
