--- a/.github/workflows/pr_pipe.yml
+++ b/.github/workflows/pr_pipe.yml
@@ -189,7 +189,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shopware: [ '6.4.15.2', '6.4.9.0', '6.4.8.2', '6.4.0.0', '6.3.0', '6.2.0', '6.1.0' ]
+        shopware: [ '6.4.16.0', '6.4.15.0', '6.4.9.0', '6.4.8.2', '6.4.0.0', '6.3.0', '6.2.0', '6.1.0' ]
     steps:
 
       - name: Clone Code
@@ -229,7 +229,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - shopware: '6.4.15.0'
+          - shopware: '6.4.16.0'
             php: '8.1'
     steps:
 
