NTR: add dynamic run name to compatibility pipeline

--- a/.github/workflows/compatibility_pipe.yml
+++ b/.github/workflows/compatibility_pipe.yml
@@ -1,4 +1,6 @@
 name: Compatibility Pipeline
+run-name: Shopware ${{ github.event.inputs.swVersion }}, PHP ${{ github.event.inputs.phpVersion }}
+
 
 
 on:
