NTR: add junit report to cypress pipeline artifacts

--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -328,6 +328,7 @@ jobs:
           name: cypress_results_sw_v${{ matrix.shopware }}
           retention-days: 1
           path: |
+            tests/Cypress/cypress/results
             tests/Cypress/cypress/logs
             tests/Cypress/cypress/videos
             tests/Cypress/cypress/screenshots
